tests/fixtures/batch-collections/invalid-files/valid-request.bru
meta {
  name: Valid Request
  type: http
  seq: 1
}

get {
  url: https://api.example.com/valid
  body: none
  auth: none
}
